--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1>📊 BBY销售报告仪表板</h1>
         <p>查看最新的销售数据和分析报告</p>
         
-        <a href="BBY-Week_47%20Sales%20Analysis%20Report.html" class="btn">
+        <a href="BBY-Week_47-Sales-Analysis-Report.html" class="btn">
             查看第47周销售分析报告
         </a>
         
