--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBY销售报告仪表板</title>
+    <title>BBY周报仪表板</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📊 BBY销售报告仪表板</h1>
+        <h1>📊 BBY周报仪表板</h1>
         <p>查看最新的销售数据和分析报告</p>
         
         <a href="BBY-Week_47-Sales-Analysis-Report.html" class="btn">
