--- a/BBY-Week_47-Sales-Analysis-Report.html
+++ b/BBY-Week_47-Sales-Analysis-Report.html
@@ -531,7 +531,7 @@
             <!-- 活动消息 -->
             <div class="activity-banner">
                 <div class="activity-title">🎯 Week-47 黑色星期五 + 网络星期一促销活动</div>
-                <div class="activity-date">日期：2025.11.16 - 2025.11.22 | 黑五当前进度：3/14天</div>
+                <div class="activity-date">日期：2025.11.20 - 2025.12.1 | 黑五当前进度：3/14天</div>
             </div>
             
             <!-- 新品上市信息 -->
@@ -572,9 +572,9 @@
                 <div class="kpi-change positive">八周峰值</div>
             </div>
             <div class="kpi-card">
-                <div class="kpi-title">POP门店表现</div>
-                <div class="kpi-value">831店</div>
-                <div class="kpi-change positive">单店销量 10.86</div>
+                <div class="kpi-title">POP门店表现 - 831家店 - 单店单周</div>
+                <div class="kpi-value">10.86</div>
+                <div class="kpi-change positive">上周 7.81</div>
                 <div class="kpi-change positive">↑ 同比 +39.0%</div>
             </div>
         </div>
