--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         </a>
 
         <a href="BBY-Week_49-Sales-Analysis-Report.html" class="btn">
+            查看第48周销售分析报告
+        </a>
+
+        <a href="BBY-Week_49-Sales-Analysis-Report.html" class="btn">
             查看第49周销售分析报告
         </a>
         
