--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         <a href="BBY-Week_49-Sales-Analysis-Report.html" class="btn">
             查看第49周销售分析报告
         </a>
+
+        <a href="BBY-Week_50-Sales-Analysis-Report.html" class="btn">
+            查看第50周销售分析报告
+        </a>
         
         <p><small>点击上方按钮访问详细的销售数据分析</small></p>
     </div>
