Correct pricing and performance descriptions for T910
Updated pricing information and product performance descriptions.

--- a/BBY-2026_Week_1-Sales-Analysis-Report.html
+++ b/BBY-2026_Week_1-Sales-Analysis-Report.html
@@ -1062,17 +1062,17 @@
                         <td>34</td>
                         <td class="negative-change">↓ 5.6%</td>
                         <td class="price-msrp">$159.95</td>
-                        <td class="price-discounted">$179.95</td>
+                        <td class="price-discounted">$159.95</td>
                         <td>中端</td>
                         <td>0天</td>
                         <td class="discount-none">0%</td>
                         <td class="savings">$0</td>
-                        <td>异常价格 <span class="tag warning">注意</span></td>
+                        <td>正常表现 <span class="tag warning">注意</span></td>
                     </tr>
                     <tr class="sku-reason-row sku-reason-all">
                         <td colspan="10" class="sku-reason-cell">
-                            <div class="sku-reason-title">T910 - 异常价格产品</div>
-                            销量34条，占比0.31%，折后价($179.95)高于MSRP($159.95)，需要关注价格设置问题。
+                            <div class="sku-reason-title">T910 - 正常表现产品</div>
+                            销量34条，占比0.31%。
                         </td>
                     </tr>
 
@@ -1278,12 +1278,12 @@
                         <td>0天</td>
                         <td class="discount-none">0%</td>
                         <td class="savings">$0</td>
-                        <td>异常价格 <span class="tag warning">注意</span></td>
+                        <td>正常表现 <span class="tag warning">注意</span></td>
                     </tr>
                     <tr class="sku-reason-row sku-reason-air">
                         <td colspan="10" class="sku-reason-cell">
-                            <div class="sku-reason-title">T910 - 异常价格产品</div>
-                            销量34条，占比气导线0.7%，折后价($179.95)高于MSRP($159.95)，需要关注价格设置问题。
+                            <div class="sku-reason-title">T910 - 正常表现产品</div>
+                            销量34条，占比气导线0.7%。
                         </td>
                     </tr>
                 </tbody>
