--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
             <a href="BBY-2026_Week_1-Sales-Analysis-Report.html" class="week-btn">
                 第1周销售分析报告
             </a>
+
+            <a href="BBY-2026_Week_2-Sales-Analysis-Report.html" class="week-btn">
+                第2周销售分析报告
+            </a>
             
             <div class="instructions">
                 2026年的报告将随着时间推移逐步增加，请定期查看更新。
