--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <h2 class="year-title">2026年销售分析报告</h2>
                 <button class="back-btn" onclick="backToDashboard()">← 返回年份选择</button>
             </div>
-            <p class="year-stats">2026年目前有1份销售分析报告</p>
+            <p class="year-stats">2026年目前有3份销售分析报告</p>
             
             <a href="BBY-2026_Week_1-Sales-Analysis-Report.html" class="week-btn">
                 第1周销售分析报告
@@ -194,6 +194,10 @@
 
             <a href="BBY-2026_Week_2-Sales-Analysis-Report.html" class="week-btn">
                 第2周销售分析报告
+            </a>
+
+            <a href="BBY-2026_Week_3-Sales-Analysis-Report.html" class="week-btn">
+                第3周销售分析报告
             </a>
             
             <div class="instructions">
