--- a/index.html
+++ b/index.html
@@ -189,15 +189,15 @@
             <p class="year-stats">2026年目前有3份销售分析报告</p>
             
             <a href="BBY-2026_Week_1-Sales-Analysis-Report.html" class="week-btn">
-                第1周销售分析报告
+                第1周销售分析报告 : 2025.12.28 - 2026.1.3
             </a>
 
             <a href="BBY-2026_Week_2-Sales-Analysis-Report.html" class="week-btn">
-                第2周销售分析报告
+                第2周销售分析报告 : 2026.1.4 - 2026.1.10
             </a>
 
             <a href="BBY-2026_Week_3-Sales-Analysis-Report.html" class="week-btn">
-                第3周销售分析报告
+                第3周销售分析报告 : 2026.1.11 - 2026.1.17
             </a>
             
             <div class="instructions">
