--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@
             <a href="BBY-2026_Week_3-Sales-Analysis-Report.html" class="week-btn">
                 第3周销售分析报告 : 2026.1.11 - 2026.1.17
             </a>
+
+            <a href="BBY-2026_Week_4-Sales-Analysis-Report.html" class="week-btn">
+                第4周销售分析报告 : 2026.1.18 - 2026.1.24
+            </a>
             
             <div class="instructions">
                 2026年的报告将随着时间推移逐步增加，请定期查看更新。
