--- a/BBY-2026_Week_4-Sales-Analysis-Report.html
+++ b/BBY-2026_Week_4-Sales-Analysis-Report.html
@@ -627,12 +627,12 @@
             <!-- 活动消息 -->
             <div class="activity-banner">
                 <div class="activity-title">📦 Week-4 市场调整期</div>
-                <div class="activity-date">日期：2026.1.11 - 2026.1.17 | 整体销量环比下降24.39%，新品T010增速放缓</div>
+                <div class="activity-date">日期：2026.1.18 - 2026.1.24 | 整体销量环比下降24.39%，新品T010增速放缓</div>
             </div>
             
             <!-- 新品上市信息 -->
             <div class="new-product-banner">
-                <div class="new-product-title">🆕 新品上市：T010 (第三周)</div>
+                <div class="new-product-title">🆕 新品上市：T010 (第三周：2026.1.18 - 2026.1.24)</div>
                 <div class="new-product-info">上市日期：2026.1.5 | 本周销量1,435条，占比14.72%</div>
                 <div class="new-product-info">环比下降24.61%，市场进入调整期</div>
             </div>
