--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@
             <a href="BBY-2026_Week_4-Sales-Analysis-Report.html" class="week-btn">
                 第4周销售分析报告 : 2026.1.18 - 2026.1.24
             </a>
+
+            <a href="BBY-2026_Week_5-Sales-Analysis-Report.html" class="week-btn">
+                第5周销售分析报告 : 2026.1.25 - 2026.1.31
+            </a>
             
             <div class="instructions">
                 2026年的报告将随着时间推移逐步增加，请定期查看更新。
