--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <h2 class="year-title">2026年销售分析报告</h2>
                 <button class="back-btn" onclick="backToDashboard()">← 返回年份选择</button>
             </div>
-            <p class="year-stats">2026年目前有3份销售分析报告</p>
+            <p class="year-stats">2026年目前有6份销售分析报告</p>
             
             <a href="BBY-2026_Week_1-Sales-Analysis-Report.html" class="week-btn">
                 第1周销售分析报告 : 2025.12.28 - 2026.1.3
@@ -206,6 +206,10 @@
 
             <a href="BBY-2026_Week_5-Sales-Analysis-Report.html" class="week-btn">
                 第5周销售分析报告 : 2026.1.25 - 2026.1.31
+            </a>
+
+            <a href="BBY-2026_Week_6-Sales-Analysis-Report.html" class="week-btn">
+                第6周销售分析报告 : 2026.1.25 - 2026.1.31
             </a>
             
             <div class="instructions">
